platform/gitops/tailscale/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ts
  namespace: techx-observability
  annotations:
    tailscale.com/tags: "tag:ops-grafana"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana-tf1
  defaultBackend:
    service:
      name: grafana
      port:
        number: 80
