platform/gitops/tailscale/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ts
  namespace: techx-observability
  annotations:
    tailscale.com/tags: "tag:ops-jaeger"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jaeger-tf1
  defaultBackend:
    service:
      name: jaeger
      port:
        number: 16686
