platform/gitops/tailscale/locust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ts
  namespace: techx-tf1
  annotations:
    tailscale.com/tags: "tag:ops-locust"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - locust-tf1
  defaultBackend:
    service:
      name: load-generator
      port:
        number: 8089
